# PartnerFM

./: .gitignore  .partnerfm-datasources.json  .partnerfm-feishu-credentials.json  .partnerfm-projects.json  .partnerfm-timing.txt  CLAUDE.md  LICENSE  MEMORY.md  PartnerFM-PRD.md  PartnerFM-多智能体平台-PRD.md  README.md  Seegent-PRD.md  Seegent-多智能体平台-PRD.md  package-lock.json  pyproject.toml  server.py  setup.cfg  setup.py  业务数据看板-PRD.md  看板升级-首页改造-实现方案.md  看板改版方案-数据源主导模式.md  项目工作流追踪-PRD.md
dashboards/: .dashboard-folder_1782617461916_baex.json
partnerfm/: __init__.py  __main__.py  server.py
partnerfm/static/: index.html
seegent/: __init__.py  __main__.py  server.py
seegent/static/: index.html
workbuddy-sidecar/: .env.example  .gitignore  INTEGRATION.md  package-lock.json  package.json  server.js
