[build-system]
requires = ["setuptools>=58"]
build-backend = "setuptools.build_meta"

[project]
name = "seegent"
version = "0.1.0"
description = "本地 AI 工作台 — 文件管理、模型配置、AI 对话"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
seegent = "seegent.__main__:main"

[project.optional-dependencies]
full = [
    "numpy>=1.24",
    "pdfplumber>=0.10",
    "python-docx>=0.8",
    "pytesseract>=0.3",
    "psutil>=5.9",
]

[tool.setuptools.package-data]
seegent = ["static/*"]
