[metadata]
name = partnerfm
version = 0.1.0
description = 本地 AI 工作台 — 文件管理、模型配置、AI 对话
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = partnerfm
python_requires = >=3.9
include_package_data = True

[options.package_data]
partnerfm = static/*

[options.entry_points]
console_scripts =
    partnerfm = partnerfm.__main__:main

[options.extras_require]
full =
    numpy>=1.24
    pdfplumber>=0.10
    python-docx>=0.8
    pytesseract>=0.3
    psutil>=5.9
